<resources>
    <string name="app_name">ManualsApp</string>

    <string name="Menu_panel">Panel</string>
    <string name="Menu_cuenta">Cuenta</string>

    <string name="Titulo_RL_Admin">Título</string>

    <string name="Txt_rol">Por favor elija un rol</string>
    <string name="Btn_rol_administrador">Administrador</string>
    <string name="Btn_rol_cliente">Cliente</string>

    <string name="TxtRegistroAdmin">Registro de Administrador</string>

    <string name="Et_nombres_admin">Nombres</string>
    <string name="Et_email_admin">email</string>
    <string name="Et_password_admin">Contraseña</string>
    <string name="Et_R_password_admin">Repita la contraseña</string>
    <string name="Btn_registrar_admin">Registarme</string>
    <string name="CerrarSesionAdmin">Cerrar Sesión</string>
    <string name="TxtLoginAdmin">Login Administradores</string>
    <string name="Btn_login_admin">Ingresar</string>
    <string name="Txt_tengo_cuenta">Tengo una cuenta</string>

    <string name="Btn_agregar_categoria">Agregar Categoría</string>
    <string name="Txt_agregar_categoria">Agregar Categoría</string>
    <string name="Et_categoria">Ingrese Categoría</string>
    <string name="Agregar_categoria_BD">Agregar</string>

    <string name="Item_nombre_cat_a">Nombre Categoría</string>
    <string name="Buscar_categoria">Buscar Categoría</string>
    <string name="Txt_agregar_libro">Agregar Libro</string>

    <string name="Et_titulo_libro">Título Libro</string>
    <string name="Et_descripcion_libro">Descripción Libro</string>
    <string name="Tv_categoria_libro">Categoría</string>

    <string name="Btn_subir_libro">Subir</string>

    <string name="Txt_titulo_libro">Libros</string>
    <string name="Txt_categoria_libro">Categoría</string>

    <string name="Et_buscar_libro_admin">Buscar Libro</string>

    <string name="Txt_titulo_libro_item">Título Libro</string>
    <string name="Txt_descripcion_libro_item">Descripción Libro</string>
    <string name="Txt_categoria_libro_admin">Categoría</string>
    <string name="Txt_tamanio_libro_admin">5MB</string>
    <string name="Txt_fecha_libro_admin">dd/MM/yyyy</string>

    <string name="Txt_actualizar_Libro">Actualizar Libro</string>
    <string name="Btn_actualizar_Libro">Actualizar</string>
    <string name="Txt_detalle_libro">Detalle Libro</string>

    <string name="titulo_libro_D">Titulo Libro</string>
    <string name="Txt_categoria_D">Categoria: </string>
    <string name="categoria_D">--</string>
    <string name="Txt_fecha_D">Fecha: </string>
    <string name="fecha_D">--</string>
    <string name="Txt_tamanio_D">Tamaño: </string>
    <string name="tamanio_D">--</string>
    <string name="Txt_vistas_D">Vistas: </string>
    <string name="vistas_D">--</string>
    <string name="Txt_descargas_D">Descargas: </string>
    <string name="descargas_D">--</string>
    <string name="Txt_paginas_D">Páginas: </string>
    <string name="paginas_D">--</string>
    <string name="Txt_descripcion_D">Descripción: </string>
    <string name="descripcion_D">--</string>

    <string name="Btn_leer_libro">Leer</string>
    <string name="Txt_leer_libro">Lectura de Libro</string>

    <!--Perfil Administrador-->
    <string name="nombres_admin">Nombres: </string>
    <string name="Txt_nombres_admin"> -- </string>
    <string name="email_admin">Email: </string>
    <string name="Txt_email_admin"> -- </string>
    <string name="tiempo_registro_admin">Miembro desde: </string>
    <string name="Txt_tiempo_registro_admin"> -- </string>
    <string name="rol_admin">Rol: </string>
    <string name="Txt_rol_admin"> -- </string>
    <string name="Txt_mas_opciones">Más Opciones: </string>

    <string name="EditarPerfilAdmin">Editar Perfil</string>
    <string name="Txt_editar_perfil_admin">Editar Perfil</string>
    <string name="Et_a_nombres">Nombres</string>
    <string name="Btn_actualizar_info">Actualizar</string>

    <string name="xxx">xx</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>