<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragmentos_Admin.Fragment_admin_cuenta">


    <!-- Eliminado en 14 0:46
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hello_blank_fragment" /> -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatImageView
            android:src="@drawable/ic_imagen_perfil"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:scaleType="centerCrop"
            android:id="@+id/img_perfil_admin"
            android:layout_width="120dp"
            android:layout_height="120dp"/>


        <!--Nombres-->
        <TextView
            android:id="@+id/nombres_admin"
            android:text="@string/nombres_admin"
            android:layout_below="@+id/img_perfil_admin"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/Txt_nombres_admin"
            android:text="@string/Txt_nombres_admin"
            android:layout_below="@+id/img_perfil_admin"
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <!--Email-->
        <TextView
            android:id="@+id/email_admin"
            android:text="@string/email_admin"
            android:layout_below="@+id/nombres_admin"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/Txt_email_admin"
            android:text="@string/Txt_email_admin"
            android:layout_below="@+id/nombres_admin"
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <!--Tiempo Registro-->
        <TextView
            android:id="@+id/tiempo_registro_admin"
            android:text="@string/tiempo_registro_admin"
            android:layout_below="@+id/email_admin"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/Txt_tiempo_registro_admin"
            android:text="@string/Txt_tiempo_registro_admin"
            android:layout_below="@+id/email_admin"
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <!--Rol-->
        <TextView
            android:id="@+id/rol_admin"
            android:text="@string/rol_admin"
            android:layout_below="@+id/tiempo_registro_admin"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/Txt_rol_admin"
            android:text="@string/Txt_rol_admin"
            android:layout_below="@+id/tiempo_registro_admin"
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_below="@id/rol_admin"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/Txt_mas_opciones"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!--Actualizar informacion-->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                app:cardCornerRadius="10dp"
                app:contentPadding="10dp">
                <TextView
                    android:id="@+id/EditarPerfilAdmin"
                    android:text="@string/EditarPerfilAdmin"
                    app:drawableStartCompat="@drawable/ic_editar_informacion"
                    app:drawableEndCompat="@drawable/ic_siguiente"
                    android:drawablePadding="10dp"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            </com.google.android.material.card.MaterialCardView>
            <!--Cerrar Sesion-->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                app:cardCornerRadius="10dp"
                app:contentPadding="10dp">

                <TextView
                    android:id="@+id/CerrarSesionAdmin"
                    android:text="@string/CerrarSesionAdmin"
                    android:drawablePadding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:drawableStartCompat="@drawable/ic_cerrar_sesion"
                    app:drawableEndCompat="@drawable/ic_siguiente" />



            </com.google.android.material.card.MaterialCardView>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </RelativeLayout>





</ScrollView>